Add facing for character tracking
